--- a/MVCStudenClassAssinment/MVCStudenClassAssinment/Views/Student/Edit.cshtml
+++ b/MVCStudenClassAssinment/MVCStudenClassAssinment/Views/Student/Edit.cshtml
@@ -3,10 +3,7 @@
 @{
     ViewBag.Title = "Edit";
 
-    List<SelectListItem> selectListItems = new List<SelectListItem>();
-    //foreach (var item in studenParentViewModel.StudentClassList)
-    //    selectListItems.Add(new SelectListItem { Text = item.Name, Value = item.ClassId.ToString(), Selected = item.ClassId == studenParentViewModel.StudentClassId });
-
+    List<SelectListItem> selectListItems = new List<SelectListItem>() { new SelectListItem { Text = "Select Class", Value = "0" } };
     Model.StudentClassList.ForEach(x => selectListItems.Add(new SelectListItem { Text = x.Name, Value = x.ClassId.ToString(), Selected = x.ClassId == Model.StudentClassId }));
 }
 
@@ -20,7 +17,7 @@
     <div class="form-horizontal">
         <h4>SchoolClassViewModel</h4>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @*@Html.ValidationSummary(true, "", new { @class = "text-danger" })*@
         @Html.HiddenFor(model => model.StudentId)
 
         <div class="form-group">
@@ -31,20 +28,63 @@
             </div>
         </div>
         <div class="form-group">
+            @Html.LabelFor(model => model.StudentLastName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.StudentLastName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.StudentLastName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.ParentFirstName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ParentFirstName, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+                @Html.ValidationMessageFor(model => model.ParentFirstName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.ParentLastName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ParentLastName, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+                @Html.ValidationMessageFor(model => model.ParentLastName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
             @Html.LabelFor(model => model.StudentClass, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @*@Html.DropDownListFor(model => model.StudentClassId, new SelectList(Model.StudentClassList, "ClassId", "Name"), "Select Category", new { @class = "form-control" })*@
                 @Html.DropDownListFor(model => model.StudentClassId, selectListItems, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.StudentClassId, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <div class="form-group">
+            @Html.LabelFor(model => model.ParentEmail, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ParentEmail, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ParentEmail, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.ParentMobile, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ParentMobile, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ParentMobile, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Active, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.CheckBoxFor(model => model.Active, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Active, "", new { @class = "text-danger" })
+            </div>
+        </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
+    @Html.HiddenFor(model => model.ParentFirstName)
+    @Html.HiddenFor(model => model.ParentLastName)
+
 }
 
 <div>
