--- a/MVCStudenClassAssinment/MVCStudenClassAssinment/Views/Shared/_Layout.cshtml
+++ b/MVCStudenClassAssinment/MVCStudenClassAssinment/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     @Scripts.Render("~/bundles/jquery")
     <script src="~/Scripts/toastr.min.js"></script>
     <link href="~/Content/toastr.min.css" rel="stylesheet" />
+    <script src="~/Scripts/CommanScript/CommanScript.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
