Rename app name

--- a/MVCStudenClassAssinment/MVCStudenClassAssinment/Views/Student/Edit.cshtml
+++ b/MVCStudenClassAssinment/MVCStudenClassAssinment/Views/Student/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVCStudenClassAssinment.Model.StudenParentViewModel
+﻿@model MVCStudentClassAssignment.Model.StudenParentViewModel
 @{
     ViewBag.Title = "Edit";
 
