--- a/MVCStudenClassAssinment/MVCStudenClassAssinment/Views/Student/Index.cshtml
+++ b/MVCStudenClassAssinment/MVCStudenClassAssinment/Views/Student/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MVCStudenClassAssinment.Model.StudenParentViewModel>
+﻿@model IEnumerable<MVCStudentClassAssignment.Model.StudenParentViewModel>
 
 @{
     ViewBag.Title = "List of Students";
