--- a/MVCStudenClassAssinment/MVCStudenClassAssinment/Views/Users/Create.cshtml
+++ b/MVCStudenClassAssinment/MVCStudenClassAssinment/Views/Users/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVCStudenClassAssinment.Model.Model.User
+﻿@model MVCStudentClassAssignment.Model.Model.User
 
 @{
     ViewBag.Title = "Create";
