--- a/MVCStudenClassAssinment/MVCStudenClassAssinment/Views/Users/Index.cshtml
+++ b/MVCStudenClassAssinment/MVCStudenClassAssinment/Views/Users/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MVCStudenClassAssinment.Model.Model.User>
+﻿@model IEnumerable<MVCStudentClassAssignment.Model.Model.User>
 
 @{
     ViewBag.Title = "Index";
